--- a/landing-with-polish.html
+++ b/landing-with-polish.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
 
   <!-- Connect to Bootstrap CSS -->
-  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.css">
+  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-polish.css">
 
   <!-- Connect to Font Awesome CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
@@ -51,10 +51,10 @@
 <body>
 
   <nav class="navbar navbar-default navbar-fixed-top">
-    <div class="container">
+    <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="row-1">
-        <div class="col-md-10 col-md-offset-1">
+        <div class="col-md-8 col-md-offset-2">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
               <span class="sr-only">Toggle navigation</span>
@@ -66,6 +66,7 @@
               <i class="fa fa-dropbox fa-lg" aria-hidden="true"></i>
               Filebox
             </a>
+
           </div>
 
 
@@ -75,7 +76,6 @@
 
             <!-- <div class=" col-md-4"> -->
             <!-- col-md-offset-1 -->
-            <ul class="nav navbar-nav navbar-right">
               <li><a href="#">Download the app</a></li>
               <li><a href="#">Sign in</a></li>
               <button type="submit" class="btn btn-default navbar-btn">Try Filebox Business</button>
@@ -104,10 +104,10 @@
       <div class="col-md-offset-2 col-md-4">
         <form>
           <div class="form-group" style="padding-top:20px">
-            <input type="text"class="form-control" id="exampleInputEmail1" placeholder="Full name">
+            <input type="name"class="form-control" id="exampleInputEmail1" placeholder="Full name">
           </div>
           <div class="form-group">
-            <input type="email"class="form-control" id="exampleInputPassword1" placeholder="Email">
+            <input type="name"class="form-control" id="exampleInputPassword1" placeholder="Email">
           </div>
           <div class="form-group">
             <input type="password"class="form-control" id="exampleInputPassword1" placeholder="Password">
@@ -118,8 +118,8 @@
             </label>
           </div>
 
-          <button type="submit" class="btn btn-primary btn-primary btn-block" style="margin-bottom:41px">Sign up for free</button>
-          <button type="submit" class="btn btn-primary btn-block">
+          <button type="button" class="btn btn-primary btn-primary btn-block" style="margin-bottom:41px">Sign up for free</button>
+          <button type="button" class="btn btn-primary btn-block">
             <i class="fa fa-google" aria-hidden="true" style="padding-right:2px"></i>
             Sign up free with Google</button>
 
